--- a/Source/NekoEngine.vcxproj.filters
+++ b/Source/NekoEngine.vcxproj.filters
@@ -652,6 +652,9 @@
     <ClInclude Include="CarComponent.h">
       <Filter>Sources\Modules\GO&amp;Components\Components</Filter>
     </ClInclude>
+    <ClInclude Include="SphereColliderComponent.h">
+      <Filter>Sources\Modules\GO&amp;Components\Components</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ModuleInput.cpp">
@@ -925,6 +928,9 @@
       <Filter>Sources\Modules\GO&amp;Components\Components</Filter>
     </ClCompile>
     <ClCompile Include="CarComponent.cpp">
+      <Filter>Sources\Modules\GO&amp;Components\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="SphereColliderComponent.cpp">
       <Filter>Sources\Modules\GO&amp;Components\Components</Filter>
     </ClCompile>
   </ItemGroup>
